2011-04-26 Harald Oehlmann <oehhar@users.sourceforge.net>

    *lang/pl.rc updated by Wojciech Kocjan.

2011-04-26 Harald Oehlmann <oehhar@users.sourceforge.net>

	*notebook.tcl The user frame of the notebook is now a themed
	frame in themed mode. The set background color does not apply
	to the user frame in this case.

2011-04-26 Harald Oehlmann <oehhar@users.sourceforge.net>

	label.tcl configuring foreground color caused error when
	themed [Bug 3292977]

2011-04-20 Harald Oehlmann <oehhar@users.sourceforge.net>

	lang/hu.rc by Rezso updated

2011-04-20 Harald Oehlmann <oehhar@users.sourceforge.net>

    * font.tcl, lang/*.rc: Add translation possibility
    for color picker button of font dialog.
    Used google translater to translate "Color" to all languages.
    Please check if this is correct. [Bug 3289573] reported by Rezso

2011-04-19 Harald Oehlmann <oehhar@users.sourceforge.net>

    * lang/*.rc [Bug 3289573] : Add translation (templates) for the
    Color picker widget text "Base colors" and "User colors".
    Only german and english locals are provided so far.

2011-02-14 Harald Oehlmann <oehhar@users.sourceforge.net>

    * combobox.tcl: [Bug 3182287] : ComboBox failes in themed mode
    due to the use of the themed entry widget. The following options
    are not supported (and thus called) any more: -relief
    -highlightbackground -highlightforeground

2011-02-14 Harald Oehlmann <oehhar@users.sourceforge.net>

    * entry.tcl, labelentry.tcl, labelframe.tcl, mainframe.tcl,
    pagesmgr.tcl, scrollw.tcl: [Bug 3168761]:
    entry failes when themed support activated with:
    unknown option "-highlightthickness" (reported by George
    on clt 27 Jan., 16:55).
    The patch by Wojciech Kocjan fixes this and enhances
    labelentry, labelframe and pagesmgr to also use themed frames.
    Within scrollw.tcl, a bug for empty background handling is fixed.
    The scrollbar background is not set any more for not-themed widget.
