@@ -37,6 +37,7 @@
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="#-width">-width</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-sizegrip">-sizegrip</A></TR>
 </TABLE></DD>
 </DL>
 <DL>
@@ -191,6 +192,11 @@ Tk_GetPixels. If this option is less than or equal to zero (the default) then th
 will not request any size at all.
 </DD>
 </DL>
+<DL><DT><A NAME="-sizegrip"><B>-sizegrip (themed, read-only)</B></A></DT>
+<DD>
+
+If bool argument is true and themed mode, show a ttk sizegrip widget in the lower-right corner.
+</DD>
 <HR WIDTH="50%"><BR>
 <B><A NAME="wc">WIDGET COMMAND</A></B><BR>
 <DL><DT><A NAME="addindicator"><I>pathName</I> <B>addindicator</B></A>
